--- a/hotspot/README
+++ b/hotspot/README
@@ -11,6 +11,8 @@ Simple Build Instructions:
      
   The files that will be imported into the jdk build will be in the "build"
   directory.
+Hotspot：全称 Java HotSpot Performance Engine，是 Java 虚拟机的一个实现，包含了服务器版和桌面应用程序版。
+利用 JIT 及自适应优化技术（自动查找性能热点并进行动态优化）来提高性能。
 
 HotSpot目录结构 2018-08-20  15:32 Charles
 ├─agent                            Serviceability Agent的客户端实现
